--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CarritoDeCompras
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-j-8.0.33.jar=C:\\Users\\Juan\\Desktop\\programacion\\jdbcDriver\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33.jar
+file.reference.sqljdbc42.jar=C:\\Users\\Juan\\Desktop\\programacion\\jdbcDriver\\sqljdbc_6.0\\esn\\jre8\\sqljdbc42.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.mysql-connector-j-8.0.33.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
